feat: add generic link component

--- a/app/public/locales/en/common.json
+++ b/app/public/locales/en/common.json
@@ -25,5 +25,8 @@
     },
     "buttons": {
         "login": "Login"
+    },
+    "links": {
+        "to-register": "Not registered yet ? Let's go !"
     }
 }
