feat: SignIn completed

--- a/app/public/locales/en/common.json
+++ b/app/public/locales/en/common.json
@@ -8,6 +8,14 @@
             "fr": "French"
         }
     },
+    "navbar": {
+        "links": {
+            "home": "Home",
+            "proposals": "Proposals",
+            "profile": "Profile",
+            "tasks": "Contracts"
+        }
+    },
     "form": {
         "inputs": {
             "labels": {
