--- a/app/public/locales/fr/common.json
+++ b/app/public/locales/fr/common.json
@@ -26,6 +26,7 @@
                 "address": "Addresse",
                 "zipcode": "Code Postal",
                 "city": "Ville",
+                "phoneNumber": "Téléphone",
                 "confirmPassword": "Confirmer Mot de Passe",
                 "socialReason": "Raison Sociale",
                 "status": "Statut",
@@ -42,6 +43,7 @@
                 "address": "Addresse",
                 "zipcode": "Code Postal",
                 "city": "Ville",
+                "phoneNumber": "Téléphone",
                 "confirmPassword": "Confirmer Mot de Passe",
                 "socialReason": "Raison Sociale",
                 "status": "ex SARL, EURL...",
@@ -58,7 +60,8 @@
             "characterLimit": "Le mot de passe doit contenir au moins 12 caractères",
             "characterTypes": "Il doit aussi avoir 1 majuscule, 1 chiffre et un caractère spécial"
         },
-        "question": "Êtes vous un Freelance ou une Entreprise?"
+        "question": "Êtes vous un Freelance ou une Entreprise?",
+        "confirmEmail": "Inscription réussie, un email a été envoyé au mail indiqué afin de confirmer l'inscription"
     },
     "buttons": {
         "login": "Se connecter",
