--- a/app/public/locales/fr/common.json
+++ b/app/public/locales/fr/common.json
@@ -72,6 +72,7 @@
         }
     },
     "links": {
-        "to-register": "Pas encore inscrit ? C'est par ici !"
+        "toRegister": "Pas encore inscrit ? C'est par ici !",
+        "toLogin": "Déja inscrit ? Go se connecter ici !"
     }
 }
